exports[`Component > Collapsible collapses correctly 1`] = `
<Collapsible
  defaultExpanded={true}
  title="collapse">
  <div>
    <div
      ariaLevel={3}
      role="heading">
      <div
        ariaExpanded={false}
        onClick={[Function]}
        role="button">
        <Icon
          type="caret-right">
          <i
            className="fa fa-caret-right fa-fw " />
        </Icon>
        collapse
      </div>
    </div>
  </div>
</Collapsible>
`;

exports[`Component > Collapsible expands correctly 1`] = `
<Collapsible
  defaultExpanded={false}
  title="collapse">
  <div>
    <div
      ariaLevel={3}
      role="heading">
      <div
        ariaExpanded={true}
        onClick={[Function]}
        role="button">
        <Icon
          type="caret-down">
          <i
            className="fa fa-caret-down fa-fw " />
        </Icon>
        collapse
      </div>
    </div>
    <div>
      Lorem ipsum dolor sit amet.
    </div>
  </div>
</Collapsible>
`;

exports[`Component > Collapsible renders correctly 1`] = `
<Collapsible
  defaultExpanded={false}
  title="collapse">
  <div>
    <div
      ariaLevel={3}
      role="heading">
      <div
        ariaExpanded={false}
        onClick={[Function]}
        role="button">
        <Icon
          type="caret-right">
          <i
            className="fa fa-caret-right fa-fw " />
        </Icon>
        collapse
      </div>
    </div>
  </div>
</Collapsible>
`;
